# aelfgpt

./: .gitignore  Dockerfile  Dockerfile.aelfgpt  Dockerfile.chroma  Dockerfile.chromadb  README.md  aelfgpt_init.sh  chromadb_init.sh  codespace.sh  docker-compose.dev.yml  docker-compose.yml  docker_entrypoint.sh  example.env  init.sh  ollama_init.sh  pyproject.toml  requirements.txt
.idx/: dev.nix
.streamlit/: config.toml  example.secrets.toml
aelfgpt/: Dockerfile  alembic.ini  code.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt
aelfgpt/.chainlit/: config.toml
aelfgpt/pipeline/db/: dependencies.py  meta.py  utils.py
aelfgpt/pipeline/db/migrations/: __init__.py  env.py
aelfgpt/pipeline/db/models/: __init__.py  transaction.py
aelfgpt/pipeline/jobs/: aelf_streaming.py
aelfgpt/pipeline/utils/: api_calls.py
aelfgpt/resources/: aelfdocs.json
aelfgpt/resources/utils/: rag_populate_db.py
aelfgpt/src/: app.py
chromadb/: Dockerfile  docker-compose.yml
ollama/: docker-compose.yml
pipeline/jobs/: api_calls.py
resources/: aelf_repo.json
resources/utils/: rag_populate_db.py
src/: AelfGPT.py  app.py
