[tool.poetry]
name = "aelf-gpt"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <ademolabalogun91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.1.306"
llama-index = "^0.10.55"
llama-index-llms-ollama = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
