[tool.poetry]
name = "aelf-gpt"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <ademolabalogun91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.1.306"
llama-index = "^0.10.55"
llama-index-llms-ollama = "^0.1.5"
chromadb = "^0.5.4"
llama-index-embeddings-huggingface = "^0.2.2"
llama-index-readers-json = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
